--- a/src/pages/posts/post.module.css
+++ b/src/pages/posts/post.module.css
@@ -1,7 +1,3 @@
-h2, h3, h4, h5, h6 {
-    @apply bg-neutral-300 text-neutral-800
-}
-
-img {
-    @apply rounded-md border-8 border-violet-600
+.post-img {
+    @apply  shadow-xl rounded-lg border border-neutral-700 mt-4
 }
