--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,11 +8,11 @@
     font-family: "Fira Code", monospace;
 }
 
-h2,
-h3,
-h4,
-h5,
-h6 {
+article h2,
+article h3,
+article h4,
+article h5,
+article h6 {
     @apply mt-5 mb-2 text-lg font-bold border md:text-xl bg-neutral-300 text-neutral-800 w-fit;
 }
 
