--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,11 +13,11 @@ article h3,
 article h4,
 article h5,
 article h6 {
-    @apply mt-5 mb-2 text-lg font-bold border md:text-xl bg-neutral-300 text-neutral-800 w-fit;
+    @apply mt-5 mb-2 text-3xl font-bold border bg-neutral-300 text-neutral-800 w-fit;
 }
 
 article p {
-    @apply px-2 mt-3 text-sm md:text-lg;
+    @apply px-2 my-16
 }
 
 pre {
@@ -30,7 +30,7 @@ p code {
 
 code {
     white-space: pre-wrap;
-    @apply min-w-full text-sm md:text-lg;
+    @apply min-w-full;
 }
 
 blockquote {
